# fangs-package

fangs/: DESCRIPTION  LICENSE  NEWS
fangs/R/: compute_expected_loss.R  compute_loss.R  fangs.R
fangs/inst/: AUTHORS
fangs/man/: compute_expected_loss.Rd  compute_loss.Rd  fangs-package.Rd  fangs.Rd
fangs/src/: Makevars  shim.c
fangs/src/rust/: Cargo.toml
fangs/src/rust/lapjv-rust/: Cargo.toml
fangs/src/rust/lapjv-rust/src/: lib.rs
fangs/src/rust/src/: lib.rs
